 * The API was rethought to make it more intuitive - but with method proxies to keep BC

As a consequence, the use of `treeMode="NestedSet"` in a schema is deprecated. Check the new [nested_set behavior documentation] for more details.

== Directory Structure Changes ==

The organization of the Propel runtime and generator code has been reworked, in order to make navigation across Propel classes easier for developers. End users should see no difference, apart if your `build.properties` references alternate builder classes in the Propel code. In that case, you will need to update your `build.properties` with the new paths. For instance, a reference to:

{{{
#!ini
propel.builder.peer.class = propel.engine.builder.om.php5.PHP5PeerBuilder
}}}

Must be changed to:

{{{
#!ini
propel.builder.peer.class = builder.om.PHP5PeerBuilder  
}}}

Browse the Propel generator directory structure to find the classes you need.

== DebugPDO Refactoring ==

To allow custom connection handlers, the debug code that was written in the `DebugPDO` class has been moved to `PropelPDO`. The change is completely backwards compatible, but makes it easier to connect to a database without using PDO.

During the change, the documentation about Propel logging and debugging features was rewritten and should now be clearer.

== Criteria Enhancements ==

`Criteria::addOr()` operates the way you always expected it to. For instance, in Propel 1.4, `addOr()` resulted in a SQL `AND` if called on a column with no other condition:

{{{
#!php
<?php
// addOr() used to work on a column with an existing condition
$c = new Criteria();
$c->add(BookPeer::TITLE, '%Leo%', Criteria::LIKE);
$c->addOr(BookPeer::TITLE, '%Tolstoi%', Criteria::LIKE);
// translates in SQL as
// WHERE (book.TITLE LIKE '%Leo%' OR book.TITLE LIKE '%Tolstoi%')

// addOr() used to fail on a column with no existing condition
$c = new Criteria();
$c->add(BookPeer::TITLE, '%Leo%', Criteria::LIKE);
$c->addOr(BookPeer::ISBN, '1234', Criteria::EQUAL);